--- a/app/src/main/res/layout/weather_widget.xml
+++ b/app/src/main/res/layout/weather_widget.xml
@@ -51,7 +51,8 @@
                 android:text="FUCK"
                 android:layout_gravity="center"
                 android:enabled="false"
-                android:background="@color/colorAccent"/>
+                android:background="@color/colorAccent"
+                android:onClick="Butt"/>
 
         </LinearLayout>
     </LinearLayout>
