--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,16 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.oerlex.android_assignment3.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Weather App"
+            android:onClick="openWeatherIntent"
+            android:layout_weight="4"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:background="@color/colorAccent"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Telephone List"
+            android:onClick="openPhoneIntent"
+            android:layout_weight="4"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:background="@color/accent_material_light"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="City Map"
+            android:onClick="openCityIntent"
+            android:layout_weight="4"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:background="@color/abc_search_url_text_normal"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Route Map"
+            android:onClick="openRouteIntent"
+            android:layout_weight="4"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:background="@color/colorAccent"/>
+    </LinearLayout>
+
 </RelativeLayout>
