--- a/app/src/main/res/layout/weather_widget.xml
+++ b/app/src/main/res/layout/weather_widget.xml
@@ -21,7 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="2sp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textSize="20sp" />
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/ll_weather_widget"
@@ -33,25 +34,35 @@
 
             <ImageView
                 android:id="@+id/imageviewIcon"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_gravity="left"/>
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_gravity="left"
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textviewTemperature"
-                android:layout_width="40sp"
+                android:layout_width="50sp"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="TEMPERATURE"/>
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textviewWindSpeed"
+                android:layout_width="50sp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/btnUpdate"
-                android:layout_width="50sp"
+                android:layout_width="70sp"
                 android:layout_height="50sp"
                 android:text="Update"
-                android:layout_gravity="right"
+                android:layout_gravity="center|end"
                 android:background="@color/colorAccent"
-                android:enabled="true"/>
+                android:enabled="true"
+                android:layout_weight="1"
+                android:textAlignment="center" />
 
         </LinearLayout>
     </LinearLayout>
